# freetser

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/freetser/: __init__.py  client.py  core.py  server.py  storage.py
tests/: conftest.py  main.py  smoke_test.py  stress_test.py  test_client.py  test_db_operations.py  test_server.py  test_storage.py  test_unix_socket.py
