[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["CHANGELOG.md"]

[project]
name = "freetser"
version = "0.3.3"
description = "A free-threaded HTTP server built on top of h11"
authors = [
    { name = "Tip ten Brink", email = "tip@tenbrinkmeijs.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h11>=0.16.0,<0.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "requests>=2.32.0",
    "ruff>=0.14.6",
    "ty>=0.0.7",
]

[tool.ruff]
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
